DiffManager Logging shows OS Fixed Error with parsing build packages without builds present Added Execute Task with no threading and with more ram